modified:   config.json.template

--- a/config.json.template
+++ b/config.json.template
@@ -7,7 +7,7 @@
 		{
 			"user":"user02",
 			"wif":"wif02"
-		},
+		}
 	],
 	"popular_fellows": [
 		"sweetsssj",
@@ -15,9 +15,8 @@
 		"dollarvigilante",
 		"ats-david",
 		"kingscrown",
-		"jerrybanfield",
+		"jerrybanfield"
 	]
-
 }
 
 
